--- a/q-filter-tree/Cargo.toml
+++ b/q-filter-tree/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.126", features = ["derive"] }
+
+[dev-dependencies]
+serde_json = "1.0.64"
