--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,9 @@
-export VLC_HOST=127.0.0.1
+# shared
 export VLC_PORT=8090
 export VLC_PASSWORD=not_secure
+
+# VLC client
+export VLC_HOST=127.0.0.1
+
+# VLC server
+export VLC_BIND_HOST=127.0.0.1
