--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-awc = "2.0.3"
-tokio = { version = "1.8.1", features = ["rt", "sync"] }
+tokio = { version = "1.8.1", features = ["sync"] }
 form_urlencoded = "1.0.1"
+hyper = { version = "0.14.11", features = ["client", "http1", "tcp"] }
+http = "0.2.4"
+base64 = "0.13.0"
