--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -12,3 +12,5 @@ hyper = { version = "0.14.11", features = ["client", "http1", "tcp"] }
 http = "0.2.4"
 base64 = "0.13.0"
 backoff = { version = "0.3.0", features = ["tokio"] }
+serde = { version = "1.0.126", features = ["derive"] }
+serde_json = "1.0.64"
