--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ resolver = "2"
 [dependencies]
 q-filter-tree = { path = "./q-filter-tree" }
 vlc-http = { path = "./vlc-http" }
-#actix-web = "3.3.2"
 tokio = { version = "1.8.1", features = ["rt-multi-thread", "sync", "macros"] }
+warp = "0.3.1"
+http = "0.2.4"
