--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 description = "Interactive graph-based sequencer for beets songs playing on a VLC backend."
 
 [workspace]
-members = ["q-filter-tree", "vlc-http"]
+members = ["q-filter-tree", "vlc-http", "frontend"]
 resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
