--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 description = "Interactive graph-based sequencer for beets songs playing on a VLC backend."
 
 [workspace]
-members = ["q-filter-tree", "vlc-http", "frontend"]
+members = ["q-filter-tree", "vlc-http", "frontend", "shared"]
 resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,3 +17,5 @@ tokio = { version = "1.8.1", features = ["rt-multi-thread", "sync", "macros"] }
 warp = "0.3.1"
 http = "0.2.4"
 clap = "2.33.3"
+shared = { path = "./shared" }
+serde_json = "1.0.64"
