--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ tokio = { version = "1.8.1", features = ["rt-multi-thread", "sync", "macros"] }
 warp = "0.3.1"
 http = "0.2.4"
 clap = "2.33.3"
-shared = { path = "./shared" }
+shared = { path = "./shared", features = ["server"] }
 serde_json = "1.0.64"
+futures = "^0.3"
