--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2018"
 [dependencies]
 yew = "0.18"
 anyhow = "^1"
-shared = { path = "../shared" }
+shared = { path = "../shared", features = ["client"] }
+serde = { version = "1.0.126" }
+serde_json = "1.0.64"
