--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Daniel Lambert <danjl1100@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+client = []
+server = []
 
 [dependencies]
 serde = { version = "^1.0", features = [ "derive" ] }
