--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -14,3 +14,4 @@ base64 = "0.13.0"
 backoff = { version = "0.3.0", features = ["tokio"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+shared = { path = "../shared" }
