--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -12,3 +12,5 @@ anyhow = "^1"
 shared = { path = "../shared", features = ["client"] }
 serde = { version = "1.0.126" }
 serde_json = "1.0.64"
+gloo-timers = "0.2.1"
+chrono = { version = "0.4.19", features = ["wasmbind"] }
