--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0.126" }
 serde_json = "1.0.64"
 gloo-timers = "0.2.1"
 chrono = { version = "0.4.19", features = ["wasmbind"] }
+backoff = { version = "0.3.0", features = ["wasm-bindgen"] }
