--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = "1.0.64"
 gloo-timers = "0.2.1"
 chrono = { version = "0.4.19", features = ["wasmbind"] }
 backoff = { version = "0.3.0", features = ["wasm-bindgen"] }
+web-sys = { version = "0.3.53", features = ["Location", "Window"] }
