--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ clap = "2.33.3"
 shared = { path = "./shared", features = ["server"] }
 serde_json = "1.0.64"
 futures = "^0.3"
+hotwatch = "0.4.5"
