--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ shared = { path = "./shared", features = ["server"] }
 serde_json = "1.0.64"
 futures = "^0.3"
 hotwatch = "0.4.5"
+chrono = "0.4.19"
