--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -15,3 +15,4 @@ backoff = { version = "0.3.0", features = ["tokio"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 shared = { path = "../shared" }
+chrono = "0.4.19"
