--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 shared = { path = "../shared" }
 chrono = "0.4.19"
+futures = "^0.3"
