--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 [features]
 client = []
 server = []
+time_now = []
+wasm = ['chrono/wasmbind']
 
 [dependencies]
 serde = { version = "^1.0", features = [ "derive" ] }
+chrono = "0.4.19"
