--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,8 @@ tokio = { version = "1.8.1", features = ["rt-multi-thread", "sync", "macros"] }
 warp = "0.3.1"
 http = "0.2.4"
 clap = "2.33.3"
-shared = { path = "./shared", features = ["server"] }
+shared = { path = "./shared", features = ["server", "time_now"] }
 serde_json = "1.0.64"
 futures = "^0.3"
 hotwatch = "0.4.5"
-chrono = "0.4.19"
 hyper = { version = "0.14.11" }
