--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.8.1" }
+tokio = { version = "1.11.0" }
 form_urlencoded = "1.0.1"
 hyper = { version = "0.14.11", features = ["client", "http1", "tcp"] }
 http = "0.2.4"
@@ -14,6 +14,5 @@ base64 = "0.13.0"
 backoff = { version = "0.3.0", features = ["tokio"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
-shared = { path = "../shared" }
-chrono = "0.4.19"
+shared = { path = "../shared", features = ["time_now"] }
 futures = "^0.3"
