--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.11.0" }
+tokio = { version = "1.11.0", features = ["macros"] }
 form_urlencoded = "1.0.1"
 hyper = { version = "0.14.11", features = ["client", "http1", "tcp"] }
 http = "0.2.4"
