--- a/q-filter-tree/Cargo.toml
+++ b/q-filter-tree/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0.126", features = ["derive"] }
+rand = "0.8.4"
+rand_chacha = "0.3.1"
 
 [dev-dependencies]
 serde_json = "1.0.64"
