--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ resolver = "2"
 [dependencies]
 q-filter-tree = { path = "./q-filter-tree" }
 vlc-http = { path = "./vlc-http" }
-tokio = { version = "1.8.1", features = ["rt-multi-thread", "sync", "macros"] }
-warp = "0.3.1"
+tokio = { version = "1.17.0", features = ["rt-multi-thread", "sync", "macros"] }
+warp = "0.3.2"
 http = "0.2.4"
 clap = "2.33.3"
 shared = { path = "./shared", features = ["server", "time_now"] }
 serde_json = "1.0.64"
 futures = "^0.3"
 hotwatch = "0.4.5"
-hyper = { version = "0.14.11" }
+hyper = "0.14.18"
