--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ vlc-http = { path = "./vlc-http" }
 tokio = { version = "1.17.0", features = ["rt-multi-thread", "sync", "macros"] }
 warp = "0.3.2"
 http = "0.2.4"
-clap = "2.33.3"
+clap = { version = "3.1.6", features = ["cargo"] }
 shared = { path = "./shared", features = ["server", "time_now"] }
 serde_json = "1.0.64"
 futures = "^0.3"
