--- a/q-filter-tree/Cargo.toml
+++ b/q-filter-tree/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+shared = { path = "../shared" }
 serde = { version = "1.0.126", features = ["derive"] }
 rand = "0.8.4"
 rand_chacha = "0.3.1"
