--- a/bacon.toml
+++ b/bacon.toml
@@ -26,3 +26,7 @@ watch = ["tests"]
 [jobs.doc]
 command = ["cargo", "doc", "--color", "always", "--no-deps", "--workspace"]
 need_stdout = false
+
+[jobs.test-cli]
+command = ["cargo", "test", "--color", "always", "cli"]
+need_stdout = true
