--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -8,7 +8,6 @@ license = "GPL-3.0-or-later"
 
 [dependencies]
 tokio = { version = "1.17.0", features = ["macros"] }
-form_urlencoded = "1.0.1"
 hyper = { version = "0.14.18", features = ["client", "http1", "tcp"] }
 http = "0.2.4"
 base64 = "0.13.0"
@@ -17,3 +16,4 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 shared = { path = "../shared", features = ["time_now"] }
 futures = "^0.3"
+urlencoding = "2.1.0"
