--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = "0.18"
+yew = "0.19"
 anyhow = "^1"
 shared = { path = "../shared", features = ["client", "time_now", "wasm"] }
 serde = { version = "1.0.126" }
@@ -15,4 +15,7 @@ serde_json = "1.0.64"
 gloo-timers = "0.2.1"
 backoff = { version = "0.3.0", features = ["wasm-bindgen"] }
 web-sys = { version = "0.3.53", features = ["Location", "Window"] }
+wasm-bindgen = { version = "0.2.81" }
+gloo = { version = "0.4" }
 twox-hash = "1.6.1"
+yew-router = "0.16.0"
