--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -12,10 +12,13 @@ anyhow = "^1"
 shared = { path = "../shared", features = ["client", "time_now", "wasm"] }
 serde = { version = "1.0.126" }
 serde_json = "1.0.64"
+futures = "^0.3.21"
 gloo-timers = "0.2.1"
+gloo-net = { version = "^0.2.3", features = [ "websocket" ]}
 backoff = { version = "0.3.0", features = ["wasm-bindgen"] }
 web-sys = { version = "0.3.53", features = ["Location", "Window"] }
 wasm-bindgen = { version = "0.2.81" }
+wasm-bindgen-futures = "^0.4.32"
 gloo = { version = "0.4" }
 twox-hash = "1.6.1"
 yew-router = "0.16.0"
