--- a/q-filter-tree/Cargo.toml
+++ b/q-filter-tree/Cargo.toml
@@ -6,7 +6,11 @@ license = "GPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+clap = ["dep:clap"]
+
 [dependencies]
+clap = { version = "3.1.6", features = ["derive"], optional = true }
 shared = { path = "../shared" }
 serde = { version = "1.0.126", features = ["derive"] }
 rand = "0.8.4"
