cli vlc_http start playlist-set command impl, formalize URL input

--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1.0.64"
 shared = { path = "../shared", features = ["time_now"] }
 futures = "^0.3"
 urlencoding = "2.1.0"
+url = "2.2.2"
