fix trunk nix build by downgrading wasm-bingen to match flake.lock version, add macos to launch_vlc

--- a/.envrc
+++ b/.envrc
@@ -1,9 +1,9 @@
 # shared
 export VLC_PORT=8090
-export VLC_PASSWORD=not_secure
+export VLC_PASSWORD=notsecure_at_all
 
 # VLC client
 export VLC_HOST=127.0.0.1
 
 # VLC server
-export VLC_BIND_HOST=127.0.0.1
+export VLC_BIND_HOST=${VLC_HOST}
