--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "soundbox-ii"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 description = "Interactive graph-based sequencer for beets songs playing on a VLC backend."
 license = "GPL-3.0-or-later"
 
@@ -14,13 +14,15 @@ resolver = "2"
 [dependencies]
 q-filter-tree = { path = "./q-filter-tree" }
 vlc-http = { path = "./vlc-http" }
+sequencer = { path = "./sequencer" }
 tokio = { version = "1.17.0", features = ["rt-multi-thread", "sync", "macros"] }
 warp = "0.3.2"
 http = "0.2.4"
 clap = { version = "3.1.6", features = ["cargo", "derive"] }
 shared = { path = "./shared", features = ["server", "time_now"] }
 arg_split = { path = "./arg_split" }
-serde_json = "1.0.64"
+serde = { version = "^1.0", features = [ "derive" ] }
+serde_json = "^1.0"
 futures = "^0.3"
 hotwatch = "0.4.5"
 hyper = "0.14.18"
