--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 yew = "0.19"
 anyhow = "^1"
 shared = { path = "../shared", features = ["client", "time_now", "wasm"] }
-serde = { version = "1.0.126" }
+serde = { version = "^1.0" }
 serde_json = "1.0.64"
 futures = "^0.3.21"
 gloo-timers = "0.2.1"
