--- a/q-filter-tree/Cargo.toml
+++ b/q-filter-tree/Cargo.toml
@@ -12,7 +12,7 @@ clap = ["dep:clap"]
 [dependencies]
 clap = { version = "3.1.6", features = ["derive"], optional = true }
 shared = { path = "../shared" }
-serde = { version = "1.0.126", features = ["derive"] }
+serde = { version = "^1.0", features = ["derive"] }
 rand = "0.8.4"
 rand_chacha = "0.3.1"
 
