--- a/bacon.toml
+++ b/bacon.toml
@@ -40,7 +40,7 @@ need_stdout = false
 # if the doc compiles, then it opens in your browser and bacon switches
 # to the previous job
 [jobs.doc-open]
-command = ["cargo", "doc", "--color", "always", "--no-deps", "--open"]
+command = ["cargo", "doc", "--color", "always", "--no-deps", "--workspace", "--open"]
 need_stdout = false
 on_success = "back" # so that we don't open the browser at each change
 
