--- a/bacon.toml
+++ b/bacon.toml
@@ -19,17 +19,17 @@ command = ["cargo", "clippy", "--color", "always", "--workspace", "--tests"]
 need_stdout = false
 
 [jobs.test]
-command = ["cargo", "test", "--color", "always", "--workspace"]
+command = ["cargo", "test", "--color", "always", "--workspace", "--all-features"]
 need_stdout = true
 watch = ["tests"]
 
 [jobs.test-sequencer]
-command = ["cargo", "test", "--color", "always", "--package", "sequencer"]
+command = ["cargo", "test", "--color", "always", "--package", "sequencer", "--all-features"]
 need_stdout = true
 watch = ["tests"]
 
 [jobs.test-q-filter-tree]
-command = ["cargo", "test", "--color", "always", "--package", "q-filter-tree"]
+command = ["cargo", "test", "--color", "always", "--package", "q-filter-tree", "--all-features"]
 need_stdout = true
 watch = ["tests"]
 
@@ -45,7 +45,7 @@ need_stdout = false
 on_success = "back" # so that we don't open the browser at each change
 
 [jobs.test-cli]
-command = ["cargo", "test", "--color", "always", "cli"]
+command = ["cargo", "test", "--color", "always", "cli", "--all-features"]
 need_stdout = true
 
 [jobs.serve]
