fix Trunk build for public-url by overriding dist (add to vm-test), temporarily using crane fork

--- a/frontend/Trunk.toml
+++ b/frontend/Trunk.toml
@@ -1,5 +1,6 @@
 [build]
 public_url = "/app/"
+# N.B. `dist` is manually overridden for trunk build in craneLib.buildTrunkPackage
 dist = "../dist"
 
 [serve]
