--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,21 @@ description = "Interactive graph-based sequencer for beets songs playing on a VL
 license = "GPL-3.0-or-later"
 
 [workspace]
-members = ["q-filter-tree", "vlc-http", "frontend", "sequencer", "shared", "arg_util"]
+members = [
+  "q-filter-tree",
+  "vlc-http_old",
+  "frontend",
+  "sequencer",
+  "shared",
+  "arg_util",
+]
 resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 q-filter-tree = { path = "./q-filter-tree" }
-vlc-http = { path = "./vlc-http" }
+vlc-http = { package = "vlc-http_old", path = "./vlc-http_old" }
 sequencer = { path = "./sequencer" }
 tokio = { version = "1.23.0", features = ["rt-multi-thread", "sync", "macros"] }
 warp = "0.3.3"
