--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPL-3.0-or-later"
 [workspace]
 members = [
   "q-filter-tree",
+  "vlc-http",
   "vlc-http_old",
   "frontend",
   "sequencer",
