--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 license = "GPL-3.0-or-later"
 
 [dependencies]
+base64 = "0.22.1"
+clap = { version = "4.5.4", optional = true, features = ["derive", "env"] }
 http = "1.1.0"
 serde = { version = "1.0.199", features = ["derive"] }
 shared = { path = "../shared" }
@@ -13,3 +15,6 @@ urlencoding = "2.1.3"
 
 [dev-dependencies]
 insta = { version = "1.38.0", features = ["ron"] }
+
+[features]
+clap = ["dep:clap"]
