--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -15,3 +15,4 @@ wasm = ['chrono/wasmbind']
 [dependencies]
 serde = { version = "^1.0", features = [ "derive" ] }
 chrono = "0.4.23"
+vlc-http = { path = "../vlc-http" }
