--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -9,6 +9,7 @@ base64 = "0.22.1"
 clap = { version = "4.5.4", optional = true, features = ["derive", "env"] }
 http = "1.1.0"
 serde = { version = "1.0.199", features = ["derive"] }
+serde_json = "1.0.116"
 url = { version = "2.5.0", features = ["serde"] }
 urlencoding = "2.1.3"
 
