--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -14,7 +14,9 @@ url = { version = "2.5.0", features = ["serde"] }
 urlencoding = "2.1.3"
 
 [dev-dependencies]
-insta = { version = "1.38.0", features = ["ron"] }
+clap = { version = "4.5.4", features = ["derive"] }
+insta = { version = "1.38.0", features = ["ron", "glob"] }
 
 [features]
+default = ["clap"]
 clap = ["dep:clap"]
