--- a/vlc-http-cli/Cargo.toml
+++ b/vlc-http-cli/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.82"
-ureq = { version = "2.9.7", features = ["http-crate"] }
+ureq = { version = "2.9.7", features = ["http-crate"], default-features = false }
 vlc-http = { version = "0.1.0", path = "../vlc-http", features = ["clap"] }
