--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -10,12 +10,14 @@ clap = { version = "4.5.4", optional = true, features = ["derive", "env"] }
 http = "1.1.0"
 serde = { version = "1.0.199", features = ["derive"] }
 serde_json = "1.0.116"
+tracing = "0.1.40"
 url = { version = "2.5.0", features = ["serde"] }
 urlencoding = "2.1.3"
 
 [dev-dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 insta = { version = "1.38.0", features = ["ron", "glob"] }
+test-log = { version = "0.2.16", default-features = false, features = ["color", "trace"] }
 
 [features]
 default = ["clap"]
