--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,32 @@ members = [
   "frontend",
   "sequencer",
   "shared",
-  "arg_util",
+  "arg_util", "bucket-spigot",
 ]
 resolver = "2"
+
+
+[workspace.lints.clippy]
+# teach me
+pedantic = { level = "warn", priority = -1}
+# except this confusing pattern
+bool_to_int_with_if = { level = "allow", priority = 1}
+
+# no unwrap
+unwrap_used = "deny"
+# no panic
+panic = "deny"
+
+[workspace.lints.rust]
+# docs!
+missing_docs = "deny"
+# no unsafe
+unsafe_code = "forbid"
+
+[workspace.lints.rustdoc]
+# docs!
+broken_intra_doc_links = "deny"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -37,3 +60,4 @@ hotwatch = "0.4.6"
 hyper = "0.14.23"
 url = "2.3.1"
 toml = "0.5.10"
+
