--- a/bucket-spigot/Cargo.toml
+++ b/bucket-spigot/Cargo.toml
@@ -5,10 +5,13 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+# clap = { version = "4.5.4", features = ["derive"] }
+serde = { version = "1.0.199", features = ["derive"] }
 
 [dev-dependencies]
 arbtest = "0.3.1"
 insta = { version = "1.39.0", features = ["ron"] }
+serde_json = "1.0.116"
 
 [lints]
 workspace = true
