--- a/bucket-spigot/Cargo.toml
+++ b/bucket-spigot/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-# clap = { version = "4.5.4", features = ["derive"] }
+clap = { version = "4.5.4", features = ["derive"] }
 serde = { version = "1.0.199", features = ["derive"] }
 
 [dev-dependencies]
