--- a/bucket-spigot/Cargo.toml
+++ b/bucket-spigot/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 rand = "0.8.5"
 clap = { version = "4.5.4", features = ["derive"] }
 serde = { version = "1.0.199", features = ["derive"] }
+arbitrary = "1.3.2"
 
 [dev-dependencies]
 arbtest = "0.3.1"
