--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -16,8 +16,10 @@ urlencoding = "2.1.3"
 
 [dev-dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+eyre = "0.6.12"
 insta = { version = "1.38.0", features = ["ron", "glob"] }
 test-log = { version = "0.2.16", default-features = false, features = ["color", "trace"] }
+ureq = { version = "2.9.7", features = ["http-crate"], default-features = false }
 
 [features]
 default = ["clap"]
