--- a/bucket-spigot/Cargo.toml
+++ b/bucket-spigot/Cargo.toml
@@ -16,6 +16,8 @@ eyre = "0.6.12"
 insta = { version = "1.39.0", features = ["ron"] }
 serde_json = "1.0.116"
 serde_with = { version = "3.9.0", default-features = false, features = ["std", "alloc"] }
+arg_util = { path = "../arg_util" }
+arbitrary = { version = "1.3", features = ["derive"] }
 
 [lints]
 workspace = true
