--- a/vlc-http/Cargo.toml
+++ b/vlc-http/Cargo.toml
@@ -11,6 +11,7 @@ http = "1.1.0"
 serde = { version = "1.0.199", features = ["derive"] }
 serde_json = "1.0.116"
 tracing = "0.1.40"
+ureq = { version = "2.9.7", features = ["http-crate"], default-features = false, optional = true }
 url = { version = "2.5.0", features = ["serde"] }
 urlencoding = "2.1.3"
 
@@ -22,8 +23,9 @@ test-log = { version = "0.2.16", default-features = false, features = ["color", 
 ureq = { version = "2.9.7", features = ["http-crate"], default-features = false }
 
 [features]
-default = ["clap"]
+default = ["clap", "ureq"]
 clap = ["dep:clap"]
+ureq = ["dep:ureq"]
 
 [lints]
 workspace = true
