beet-pusher add config tunables and example scripts

--- a/beet-pusher/Cargo.toml
+++ b/beet-pusher/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 bucket-spigot = { version = "0.1.0", path = "../bucket-spigot" }
 clap = { version = "4.5.4", features = ["derive"] }
 eyre = "0.6.12"
+percent-encoding = "2.3.1"
 rand = "0.8.5"
+serde = { version = "1.0.215", features = ["derive"] }
+toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url = "2.5.3"
